# assignment-1

./: pyproject.toml  thoughts.txt
assignments/assignment_01_dream_analyzer/: dream_analyzer.py
assignments/assignment_01_emergency_dispatcher/: emergency_dispatcher.py
assignments/assignment_03_escape_room/: puzzle_master.py
assignments/assignment_03_transit_delay_explainer/: transit_delay_explainer.py
assignments/assignment_04_haiku_rephraser/: haiku_rephraser.py
assignments/assignment_04_time_travel/: paradox_resolver.py
assignments/assignment_05_flashcard_maker/: flashcard_maker.py
assignments/assignment_05_urban_legends/: legend_checker.py
assignments/assignment_06_alien_translator/: alien_translator.py
assignments/assignment_06_reply_macro_composer/: macro_composer.py
assignments/assignment_07_conspiracy_debunker/: conspiracy_debunker.py
assignments/assignment_07_minutes_batcher/: minutes_batcher.py
assignments/assignment_08_micro_coach_streamer/: micro_coach_streamer.py
assignments/assignment_08_superhero_balancer/: power_balancer.py
assignments/assignment_09_mystery_dinner/: mystery_solver.py
assignments/assignment_09_puzzle_hint_engine/: puzzle_hint_engine.py
assignments/assignment_10_dungeon_master/: dungeon_master.py
assignments/assignment_10_synthesis_orchestrator/: synthesis_orchestrator.py
src/prompt_optimizer/: __init__.py
