[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "class-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.34",
    "openai>=2.1.0",
    "pip>=25.2",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_optimizer"]
